--- a/blogspot.html
+++ b/blogspot.html
@@ -7,7 +7,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            cabecera
+            Hyperblog <span id="tagline">Tu blog</span>
         </div>
         <div id="post">
 <h1>Este es el titulo atractivo e interesante del post que jamas hallas visto</h1>
