agregar contenido adicional del blog y una mejor tipografia

--- a/blogspot.html
+++ b/blogspot.html
@@ -10,6 +10,9 @@
 <h1>Este es el titulo atractivo e interesante del post que jamas hallas visto</h1>
 <p> y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas y mas ramas y ramas y muchos mas
     
+</p> Mejorando el contenido
+<p> 
+    
 </p>
 </div>
 </div>
