--- a/blogspot.html
+++ b/blogspot.html
@@ -7,7 +7,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Hyperblog <span id="tagline">Tu blog</span>
+            Hyperblog <span id="tagline">Tu blog maestro</span>
         </div>
         <div id="post">
 <h1>Este es el titulo atractivo e interesante del post que jamas hallas visto</h1>
@@ -15,7 +15,8 @@
     
 </p> Mejorando el contenido
 <p> 
-    
+</p> subscribete y dale like
+<p> 
 </p>
 </div>
 </div>
